# osquery_history_extension

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md
config/: config.sh  config.txt
history/: commands_history.json  filesystems_history.json
include/: ChangedFile.h  CommandsLib.h  ExecutedCommand.h  FilesLib.h  HistoryExtension.h  JsonSaver.h  JsonSerializer.h  OptionsLib.h  Vim.h  VimLib.h  VimSession.h  command.h  files.h  period.h
scripts/: tests.sh
sources/: .commands_history.json  .filesystems_history.json  ChangedFile.cpp  CommandsLib.cpp  ExecutedCommand.cpp  FilesLib.cpp  HistoryExtension.cpp  JsonSaver.cpp  JsonSerializer.cpp  OptionsLib.cpp  Vim.cpp  VimLib.cpp  VimSession.cpp  command.cpp  extension.py  extexample.cpp  files.cpp  history_extension.py  main.cpp  period.cpp
tests/: test.cpp
